service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-eyego-service
spec:
  type: ClusterIP
  selector:
    app: hello-eyego
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
